--- a/agenda/course01-basics.org
+++ b/agenda/course01-basics.org
@@ -1,5 +1,5 @@
 #+TODO: TODO(t!) WAIT(W@/!) | DONE(d!) CANCELED(c@) DELEGATED-AWAY(G@/!)
-#+TODO: BUG(b!) | FIXED(f!) WONTFIX(w!)
+#+TODO: BUG(b!) WRITE(w) | FIXED(f!) WONTFIX(w!)
 #+TITLE: Emacs Course 01
 
 #+AUTHOR: Derek Feichtinger
@@ -194,7 +194,7 @@
 ** TODO selecting, copying, and pasting text [0/6]
    Emacs predates the time where the /Cut, Copy & Paste/ expressions
    were coined, and the old command names still are used.
-   - [ ] You can select text by placing the cursor on the starting
+   - [ ] You can *select text* by placing the cursor on the starting
      position and then use the standard key-combo "C-SPC"
      (set-mark-command). The position where you do this is called /the
      mark/. When you now move the cursor you will see that the region
@@ -203,22 +203,22 @@
      - you can cancel the selection by using the standard key-combo
        "C-g" (keyboard-quit). Btw: "C-g" is used for cancelling all kinds
        of interactions in Emacs.
-   - [ ] Cutting text is called /killing text/. You can kill the
+   - [ ] *Cutting* text is called /killing text/. You can kill the
      selected region by using the standard key-combo "C-k" (kill-line,
      or similar commands depending on the current mode). Try to kill
      this sentence.
-   - [ ] You can insert/paste the killed text somewhere else by moving
+   - [ ] You can *insert/paste* the killed text somewhere else by moving
      your cursor to the new position and using the standard key-combo
      "C-y" (yank). This action is called /yanking/. Insert your
      killed text here:
-   - [ ] If you do not want to cut the text, but you just want to copy
+   - [ ] If you do not want to cut the text, but you just want to *copy*
      it, you invoke the standard key-combo "M-w" (kill-ring-save) on
      the selected region. This leaves the region as it is, but you can
      insert a copy of it somewhere else with "C-y" as above. above.
    - [ ] When you invoke "C-y" to insert the text, and then follow it
      up by the standard key-combo "M-y" (yank-pop), the inserted text
      will be exchanged against earlier killed text snippets. This way
-     you can step through the history of copied text pieces. The
+     you can step through the *history of copied text* pieces. The
      memory where the copied texts are stored is called the
      "kill-ring", and repeatedly using "M-y" steps through it.
    - [ ] an even simpler way to work with the "kill-ring" is to
@@ -226,6 +226,17 @@
      mapped to "<f5> k" (helm-show-kill-ring). You will be able to
      quickly narrow down to the desired snippet from your kill history.
      Try it out.
+
+   Emacs has a whole number of other shortcuts to cut text (remember:
+   it is called "kill" in Emacs-speak). Here a selection of the
+   standard key-combos I find myself using often
+   - "C-k" :: Kills the whole line beginning from the cursor position
+   - "M-d" :: Kills the text until the end of the word (or the whole
+     word if you're in front of it)
+   - "M-k" :: Kills up to the end of the sentence.
+   All these commands can be invoked repeatedly, and each time the killed
+   text will be added to the currently saved text for copying. So, when afterwards
+   you execute a yank with "C-y" it will insert the concatenation of these kills.
      
 ** TODO searching for strings and regular expressions [0/4]
    :LOGBOOK:
@@ -253,7 +264,7 @@
        will go over all open buffers of this Emacs session.
 
 ** TODO Executing Emacs commands and getting information about them [0/4]
-   Emacs has a huge number of commands, many of them are not bound to
+   Emacs has a huge number of commands and many of them are not bound to
    key combinations. Such commands can be entered after using the
    standard key combo "M-x". In this configuration we have configured
    the package "smex" which makes the selection of commands much
@@ -273,16 +284,11 @@
      :                emacs-version
      Emacs will offer you the word under the cursor as the default for looking
      up the respective help page.
-   - [ ] One of the most powerful ways to get information is by using the
+   - [ ] A very easy way of finding and executing a command is by using the
      helm package that is configured in this Emacs configuration. You
-     can invoke the key-combo "<f5> a" (helm-apropos). You can then search
-     for Emacs commands, functions, and variables.
-     - if your cursor is on a name that matches an Emacs function or variable,
-       it will be already used as the default command. You should see it already
-       chosen as the current candidate within the helm session.
-     - <RETURN> will jump to the respective help page
-     - even better, "C-j" will show the help page while staying in helm mode,
-       so you can look at multiple commands.
+     can invoke the key-combo "<f5> x" (helm-M-x). You can then search
+     for Emacs commands, functions, and variables using helms narrowing
+     and searching features. Hitting return on the selected command will run it.
 
 * Emacs help and info systems
   Emacs is very consistent in its basic key mappings (stop laughing -
@@ -329,6 +335,20 @@
      for fast finding keys of the current mode.
      Try the key-combo "<f5> d" (helm-descbinds). You now can narrow
      down to commands
+** WRITE Get help on functions and variables
+   - "C-h f"
+   - "C-h v"
+   - [ ] One of the most powerful ways to get information is by using the
+     helm package that is configured in this Emacs configuration. You
+     can invoke the key-combo "<f5> a" (helm-apropos). You can then search
+     for Emacs commands, functions, and variables.
+     - if your cursor is on a name that matches an Emacs function or variable,
+       it will be already used as the default command. You should see it already
+       chosen as the current candidate within the helm session.
+     - <RETURN> will jump to the respective help page
+     - even better, "C-j" will show the help page while staying in helm mode,
+       so you can nicely look up multiple commands one after the other.
+   
 * Basic Org mode
 ** TODO Basic folding [0/3]
    SCHEDULED: <2020-06-12 Fri>
